# text2traj2text

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
data/raw_data/human_test_data/participant1/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
data/raw_data/human_test_data/participant2/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
data/raw_data/human_test_data/participant3/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
data/raw_data/human_test_data/participant4/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
data/raw_data/human_test_data/participant5/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  (+3 more)
data/raw_data/supermarket_env/: floor_map.csv
notebooks/LLM Data Synthesis/: Intention Generator.ipynb  Preferred Item Generator.ipynb
notebooks/Planner/: PRM.ipynb  Planner.ipynb
scripts/: eval_chatgpt.py  eval_llm.py  generate_user_activity.sh  preprocess.sh  train.py
scripts/config/: dataset_generation.yaml  eval_gpt.yaml  eval_llm.yaml  train.yaml
scripts/text2traj/: generate_paraphrasing.py  generate_purchase_list.py  generate_trajectory.py  generate_user_captions.py
src/text2traj2text/: utils.py
src/text2traj2text/eval/: dataset.py  inference.py  prompt.py  utils.py
src/text2traj2text/preprocess/: format_trajectory.py  preprocess.py  prompt.py  utils.py
src/text2traj2text/text2traj/: output_schema.py  utils.py
src/text2traj2text/train/: load_dataset.py  utils.py
(+2288 files in other folders)
